--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,5 +3,5 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #464646;
+    background-color: #e5e5e5;
 }
